# kexplus

./: .gitignore  CMakeLists.txt  FindFluidSynth.cmake  FindSDL2.cmake  FindSDL2_net.cmake  README.md  TODO  am_draw.c  am_draw.h  am_map.c  am_map.h  con_cvar.c  con_cvar.h  d_devstat.c  d_net.c  d_net.h  d_player.h  d_think.h  dgl.c  dgl.h  doomdata.h  doomstat.h  doomtype.h  f_finale.h  g_controls.h  g_game.h  g_settings.c  gl_main.c  gl_main.h  gl_texture.c  gl_texture.h  i_main.c  i_png.h  i_swap.h  i_video.c  i_video.h  i_xinput.c  i_xinput.h  in_stuff.c  m_cheat.c  (+47 more)
DOCS/: AUTHORS.txt
DOCS/HTML/IMG/: Thumbs.db
Ext/ChocolateDoom/: net_defs.h  net_structrw.c
src/: CMakeLists.txt  am_draw.c  am_draw.h  am_map.c  am_map.h  con_console.c  con_console.h  con_cvar.c  con_cvar.h  d_devstat.c  d_devstat.h  d_englsh.h  d_event.h  d_keywds.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_think.h  d_ticcmd.h  dgl.c  dgl.h  doomdata.h  doomdef.h  doomstat.h  doomtype.h  eglport.c  f_finale.c  f_finale.h  g_actions.c  g_actions.h  g_controls.h  g_demo.c  g_demo.h  g_game.c  g_game.h  g_local.h  g_settings.c  g_settings.h  (+115 more)
src/Ext/: SDL_win32_main.c  md5.c  md5.h  sal.h
src/Ext/ChocolateDoom/: net_client.c  net_client.h  net_common.c  net_common.h  net_dedicated.c  net_dedicated.h  net_defs.h  net_io.c  net_io.h  net_loop.c  net_loop.h  net_packet.c  net_packet.h  net_query.c  net_query.h  net_sdl.c  net_sdl.h  net_server.c  net_server.h  net_structrw.c  net_structrw.h
src/apple/: SDLMain.m
src/unix/: i_cpu_posix.c
src/win32/: SDL_win32_main.c  i_cpu.c  i_exception.c  i_opndir.c  i_opndir.h
src/win32/resources/: doom64.rc
